# gazu

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  mermaid.LICENSE
.github/workflows/: ci.yml  release.yml
assets/: sekien.lua
src/: filter.rs  main.rs  pandoc.rs  renderer.rs
tests/: integration.rs
tests/fixtures/: sample.md
util/: check-html-formats.sh
util/bench/: bench.sh  fixture.md
util/docs/: DESIGN.md
