[package]
name = "gazu"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"
description = "Pandoc filter: converts Mermaid code blocks to SVG via sekien"
license = "MIT OR Apache-2.0"

[[bin]]
name = "gazu"
path = "src/main.rs"

[dependencies]
# TODO: switch to a crates.io version once sekien 0.2.0 is published.
sekien = { path = "../sekien" }
serde_json = "1"
anyhow = "1"
