[package]
name = "gazu"
version = "0.2.0"
edition = "2021"
description = "Pandoc filter: converts Mermaid code blocks to SVG via sekien"
license = "MIT OR Apache-2.0"
repository = "https://github.com/olibrauma/gazu"
homepage = "https://github.com/olibrauma/gazu"
readme = "README.md"
keywords = ["pandoc", "mermaid", "filter", "svg"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "gazu"
path = "src/main.rs"

[dependencies]
sekien = "0.3.1"
serde_json = "1"
anyhow = "1"
